# src/main/java/com/mse/edu/forum/domain/PostEntity.java
@@ -9,6 +9,7 @@ import jakarta.persistence.JoinColumn;
 import jakarta.persistence.ManyToOne;
 import jakarta.persistence.OneToMany;
 import jakarta.persistence.PrePersist;
+import jakarta.persistence.PreUpdate;
 import jakarta.persistence.Table;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
@@ -28,7 +29,7 @@ public class PostEntity {
 	@GeneratedValue(strategy = GenerationType.IDENTITY)
 	private Long id;
 
-	@Column(nullable = false)
+	@Column(nullable = false, unique = true, length = 500)
 	private String title;
 
 	@Column(nullable = false, length = 10_000)
@@ -37,17 +38,31 @@ public class PostEntity {
 	@Column(nullable = false, updatable = false)
 	private Instant createdAt;
 
-    @ManyToOne
-    @JoinColumn(name = "user_id")
-    private UserEntity user;
+	@Column(nullable = false)
+	private Instant modifiedAt;
 
-    @OneToMany(mappedBy = "post")
-    private List<ReplyEntity> replies;
+	@Column(nullable = false)
+	private long viewCount;
+
+	@ManyToOne(optional = false)
+	@JoinColumn(name = "user_id", nullable = false)
+	private UserEntity user;
+
+	@OneToMany(mappedBy = "post")
+	private List<ReplyEntity> replies;
 
 	@PrePersist
 	void onCreate() {
 		if (createdAt == null) {
 			createdAt = Instant.now();
 		}
+		if (modifiedAt == null) {
+			modifiedAt = createdAt;
+		}
+	}
+
+	@PreUpdate
+	void onUpdate() {
+		modifiedAt = Instant.now();
 	}
 }
